# temporal-deployment-task

./: .gitignore  DEPLOYMENT_INSTRUCTIONS.md  FINAL_TESTING_SUMMARY.md  README.md  TESTING_GUIDE.md  demo.py  docker-compose.yml  env.template  load_test.py  monitor_system.py  pyproject.toml  quick_demo.py  render.yaml  simple_load_test.py  start.sh  stress_test.py  test_workflow.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
docs/: deployment.md  testing.md
infrastructure/argocd/: README.md  application.yaml  values-production.yaml
infrastructure/helm/temporal-platform/: Chart.yaml  values.yaml
infrastructure/helm/temporal-platform/templates/: _helpers.tpl  deployment-temporal-frontend.yaml
infrastructure/render/: Dockerfile.elasticsearch  Dockerfile.temporal-frontend  Dockerfile.temporal-history  Dockerfile.temporal-matching  Dockerfile.temporal-ui  Dockerfile.temporal-worker  elasticsearch.yml  jvm.options
infrastructure/render/dynamicconfig/: development-sql.yaml
infrastructure/render/temporal-config/: development-sql.yaml
src/: __init__.py
src/temporal_platform/: __init__.py  main.py
src/temporal_platform/activities/: __init__.py  data_processing.py  long_running.py  notifications.py
src/temporal_platform/config/: settings.py
src/temporal_platform/exceptions/: __init__.py  core.py
src/temporal_platform/models/: __init__.py  workflows.py
src/temporal_platform/workers/: __init__.py
src/temporal_platform/workflows/: __init__.py  orchestration.py
